--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "nodemon": "^2.0.15"
   }
 }
