--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,19 +4,33 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "pwa-node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\app.js",
-            "env": {
-                "NODE_ENV": "development",
-                "PORT": "5000",
-                "DATABASE_LOCAL": "mongodb://localhost:27017/books-directory"
-            }
-        }
+      {
+        "name": "Launch Program",
+        "program": "${workspaceFolder}/app.js",
+        "env": {
+          "NODE_ENV": "development",
+          "PORT": "8000",
+          "DATABASE_LOCAL": "mongodb://localhost:27017/books-directory"
+        },
+        "request": "launch",
+        "skipFiles": [
+          "<node_internals>/**"
+        ],
+        "type": "node"
+      },
+      {
+        "name": "Launch Program 2",
+        "program": "${workspaceFolder}\\app.js",
+        "env": {
+          "NODE_ENV": "development",
+          "PORT": "5000",
+          "DATABASE_LOCAL": "mongodb://localhost:27017/books-directory"
+        },
+        "type": "node",
+        "request": "launch",
+        "skipFiles": [
+            "<node_internals>/**"
+        ],
+      }
     ]
 }
