--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
+.env.development
+.env.test
+
 # compiled output
 /dist
 /node_modules
-/command
 
 # Logs
 logs
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
